--- a/menu.html
+++ b/menu.html
@@ -36,7 +36,7 @@
 							<div class="col-xs-10 col-sm-6 col-md-4 product animated fadeInDown delay-2">
 								<div class="card">
 									<img src="images/productos/turbo.png" alt="Reparación de Turbo">
-									<h3>Reparación de Turbo</h3>
+									<h3>Reparación de Turbos</h3>
 								</div>
 							</div>
 							<div class="col-xs-10 col-sm-6 col-md-4 product animated fadeInDown delay-3">
