se modifico el h1

--- a/menu.html
+++ b/menu.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>FSCarServices</title>
+	<title>FSCarService</title>
 	<link rel="stylesheet" href="./css/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:900i" rel="stylesheet">
@@ -23,7 +23,7 @@
 				<div class="menu body animated fadeInDown">				
 					<header class="text-center">
 						<img src="./images/logo2.png" height="150" alt="Logo de FSCarServices">
-						<h1 class="red-text raleway title threeD">FS Car Services</h1>
+						<h1 class="red-text raleway title threeD">FS Car Service</h1>
 					</header>
 					<div class="productos">
 						<div class="row center-xs">
